# VideoEditor

./: README.md  build-small.sh  build.gradle  build.sh  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/res/drawable/: selector_choose_next_btn_bg.xml  selector_choose_next_btn_textcolor.xml  selector_editor_cutting_ic.xml  selector_editor_del_ic.xml  selector_editor_menu_text_color.xml  selector_editor_preview_play_btn.xml  selector_editor_revoke_ic.xml  (+7 more)
app/src/main/res/drawable-xhdpi/: style_video_thumb_seekbar.xml
ffmpeg-cmd/: CMakeLists.txt  build.gradle
ffmpeg-cmd/src/androidTest/java/com/github/xch168/ffmpeg_cmd/: ExampleInstrumentedTest.java
ffmpeg-cmd/src/androidTest/java/com/m4399/ffmpeg_cmd/: ExampleInstrumentedTest.java
ffmpeg-cmd/src/main/: AndroidManifest.xml
ffmpeg-cmd/src/main/cpp/: android_log.h  ffmpeg-cmd.c  ffmpeg-cmd.cpp  ffmpeg_cmd.c  ffmpeg_cmd.h  ffmpeg_thread.c  native-lib.cpp
ffmpeg-cmd/src/main/cpp/ffmpeg/: cmdutils.c  config.h  ffmpeg.c  ffmpeg.h
ffmpeg-cmd/src/main/cpp/include/libavutil/: ffversion.h
ffmpeg-cmd/src/main/java/com/github/xch168/ffmpeg_cmd/: CmdList.java  FFmpegCmd.java
ffmpeg-cmd/src/main/java/com/m4399/ffmpeg_cmd/: CmdList.java  FFmpegCmd.java  FFmpegUtil.java  OnVideoProcessListener.java
ffmpeg-cmd/src/main/res/values/: strings.xml
ffmpeg-cmd/src/test/java/com/github/xch168/ffmpeg_cmd/: ExampleUnitTest.java
ffmpeg-cmd/src/test/java/com/m4399/ffmpeg_cmd/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+112 files in other folders)
